test/oscar/compiler/errors/actorNotFound.oscar
message testNow()


actor Tester() {
  
  receive = {
    | testNow() => {
        println("Error");
    }
  }
}

def main() => unit = {
  actor<Lost> tester = spawn actor<Lost>();
  message<testNow>() |> tester;
}